--- a/Techlent Python39.ipynb
+++ b/Techlent Python39.ipynb
@@ -264,6 +264,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Unique Only\n",
+    "Description     \n",
+    "Build a function UniqueOnly to detect whether a string only contains unique characters.\n",
+    "\n",
+    "Examples        \n",
+    "UniqueOnly(\"techlent\") returns False       \n",
+    "UniqueOnly(\"abcde\") returns True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.geeksforgeeks.org/determine-string-unique-characters/\n",
+    "\n",
+    "Time Complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def UniqueOnly(my_str):\n",
+    "    freq = {}\n",
+    "    for i in my_str:\n",
+    "        if i in freq:\n",
+    "            freq[i] += 1\n",
+    "        else:\n",
+    "            freq[i] = 1\n",
+    "    return not any(v > 1 for v in iter(freq.values()))\n",
+    "    #  any(v == 1 for v in iter(freq.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "UniqueOnly('techlent')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://www.analyticsvidhya.com/blog/2017/05/questions-python-for-data-science/\n"
    ]
   },
