--- a/Techlent Python39.ipynb
+++ b/Techlent Python39.ipynb
@@ -11,7 +11,177 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1 Python Kick Off"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Hello World\n",
+    "Description\n",
+    "Build a function HelloWorld which returns \"Hello World\".\n",
+    "\n",
+    "Examples\n",
+    "HelloWorld( ) return \"Hello World\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def HelloWorld():\n",
+    "    return \"Hello World\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Pound to Kilogram\n",
+    "Description\n",
+    "Build a function LB2KG which takes a value in pound as input and returns the corresponding value in kilogram. One pound equals to 0.4536 kg.\n",
+    "\n",
+    "Examples\n",
+    "LB2KG(1) returns 0.4536"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Odd Number\n",
+    "Description\n",
+    "Build a function Odd which takes an integer as input and returns a boolin to tell whether the integer is odd or not.\n",
+    "\n",
+    "Examples\n",
+    "Odd(3) returns True\n",
+    "Odd(4) returns False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Odd(num):\n",
+    "    return (num % 2 == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. FizzBuzz\n",
+    "Description     \n",
+    "Build a function FizzBuzz which takes a positive integer as input. If the number is divisible by 3, the function returns \"Fizz\". If the number is divisible by 5, the function returns \"Buzz\". If the number is divisible by both 3 and 5, the function returns \"FizzBuzz\". Otherwise, the function returns the number itself.\n",
+    "\n",
+    "Examples        \n",
+    "FizzBuzz(45) returns \"FizzBuzz\"     \n",
+    "FizzBuzz(9) returns \"Fizz\"      \n",
+    "FizzBuzz(25) returns \"Buzz\"     \n",
+    "FizzBuzz(17) returns \"17\"       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FizzBuzz(num):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        return \"FizzBuzz\"\n",
+    "    elif num % 3 == 0:\n",
+    "        return \"Fizz\"\n",
+    "    elif num % 5 == 0:\n",
+    "        return \"Buzz\"\n",
+    "    else:\n",
+    "        return num"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Square Root\n",
+    "Description     \n",
+    "Build a function sqrt to calculate the square root of a positive integer number. If the result is not a integer, the function returns the nearest integer to the left of the result number.\n",
+    "\n",
+    "Examples        \n",
+    "sqrt(16) returns 4      \n",
+    "sqrt(17) returns 4      \n",
+    "sqrt(77) returns 8      \n",
+    "sqrt(1) returns 1       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sqrt(num):\n",
+    "    import math\n",
+    "    return math.floor(num**(1/2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 List I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. List Comprehension\n",
+    "Description     \n",
+    "Build a function LstComp which takes two integers (i and j) as inputs and returns a list of numbers from i to j.\n",
+    "\n",
+    "Examples        \n",
+    "LstComp(1, 5) returns [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def LstComp(i,j):\n",
+    "    return [i for i in range(i,j+1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. OddNums\n",
+    "Description     \n",
+    "Build a function OddNums which takes two integers (i and j) as inputs and returns a list of ODD numbers between i and j inclusively.\n",
+    "\n",
+    "Examples        \n",
+    "OddNums(1, 5) returns [1, 3, 5]     \n",
+    "OddNums(2, 6) returns [3, 5]        \n",
+    "OddNums(1, 2) returns [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OddNums(i,j):\n",
+    "    # if i % 2 != 0:\n",
+    "    #     return [i for i in range(i,j+1,2)]\n",
+    "    # else:\n",
+    "    #     return [i for i in range(i+1,j+1,2)]\n",
+    "    return [i for i in range(i,j+1) if i % 2 != 0 ]"
    ]
   },
   {
@@ -73,6 +243,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sort a List\n",
+    "Description     \n",
+    "Build a function SortLst which sorts a list. At this time you can just use the built-in function in Python.\n",
+    "\n",
+    "Examples       \n",
+    "SortLst([4, 2, 1, 3, 4, 5]) returns [1, 2, 3, 4, 4, 5]      \n",
+    "SortLst([1, 3, 5]) returns [1, 3, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SortLst(lst):\n",
+    "    lst.sort()\n",
+    "    return  lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert a Number in a Sorted List\n",
+    "Description     \n",
+    "Build a function NumInsert which inserts a number in a sorted list.\n",
+    "\n",
+    "Examples       \n",
+    "NumInsert([1, 2, 3, 4, 5, 6], 3) returns [1, 2, 3, 3, 4, 5, 6]      \n",
+    "NumInsert([1, 2, 3, 4, 5, 6], 7) returns [1, 2, 3, 4, 5, 6, 7]      \n",
+    "NumInsert([1, 2, 3, 4, 5, 6], -1) returns [-1, 1, 2, 3, 4, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NumInsert(lst,num):\n",
+    "    lst.append(num)\n",
+    "    lst.sort()\n",
+    "    return lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Remove duplicates from a sorted list\n",
     "Description \n",
     "Build a function SortRm which removes duplicate numbers in a sorted list.   \n",
@@ -93,11 +313,6 @@
     "    [res.append(x) for x in lst if x not in res]\n",
     "    return res"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +366,26 @@
     "    # return num\n",
     "\n",
     "    return int(''.join(map(str,lst)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1203"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lst2Num([0, 1, 2, 0, 3])"
    ]
   },
   {
@@ -169,10 +404,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def MaxGain(price_lst):\n",
+    "    if len(price_lst) <= 1:\n",
+    "        return 0\n",
+    "    \n",
+    "    max_profit = 0\n",
+    "    min_input = price_lst[0]\n",
+    "    for p in price_lst[1:]:\n",
+    "        min_input = min(p,min_input)\n",
+    "        max_profit = max(max_profit,p - min_input)\n",
+    "    return max_profit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort List of Lists\n",
+    "Description     \n",
+    "Build a function SortLL which sorts a list of lists by their last elements.\n",
+    "\n",
+    "Examples        \n",
+    "SortLL([[1, 3, 5], [2, 4], [9, 7], [3]]) returns [[3], [2, 4], [1, 3, 5], [9, 7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SortLL(my_lst):\n",
+    "    my_lst.sort(key=lambda x:x[-1])\n",
+    "    return my_lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".sort()     \n",
+    "reverse parameter   \n",
+    "use the key parameter to set the built-in or custom function to compare each element of a list and sort it. For example, the following uses the built-in len() function that returns the length of each element and sorts based on the length of each element. the our case, we use lambda funtion      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 22.Pascals Triangle\n",
+    "Description     \n",
+    "Build a function PascalsT which takes an integer n as an input and generate a n layer Pascals Triangle.\n",
+    "\n",
+    "Examples    \n",
+    "PascalsT(3) returns [[1], [1, 1], [1, 2, 1]]    \n",
+    "PascalsT(5) returns [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]"
+   ]
   },
   {
    "cell_type": "markdown",
