list, string, dict

--- a/Techlent Python39.ipynb
+++ b/Techlent Python39.ipynb
@@ -818,10 +818,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def RmPunct(my_str):\n",
+    "    # import string\n",
+    "    # res = my_str.translate(str.maketrans('', '', string.punctuation))\n",
+    "    # return res\n",
+    "\n",
+    "    punc = '''!()-[]{};:'\"\\,<>./?@#$%^&*_~'''\n",
+    "    for ele in my_str:\n",
+    "        if ele in punc:\n",
+    "            my_str = my_str.replace(ele, \"\")\n",
+    "    return my_str"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -836,6 +847,18 @@
     "NGram(\"abc\", 3) returns [\"abc\"]     \n",
     "NGram(\"abc\", 4) returns [   ]       \n",
     "NGram(\"abc\", 1) returns [\"a\", \"b\", \"c\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NGram(my_str,num):\n",
+    "    if len(my_str) < num:\n",
+    "        return []\n",
+    "    return [my_str[i:i+num] for i in range(len(my_str)-num+1)]"
    ]
   },
   {
@@ -855,6 +878,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPalindrome(my_str):\n",
+    "    # 1. build-in function\n",
+    "    # return my_str == my_str[::-1]\n",
+    "\n",
+    "    # 2. two-pointers\n",
+    "    i = 0\n",
+    "    j = len(my_str) - 1\n",
+    "    while i < j:\n",
+    "        if my_str[i] != my_str[j]:\n",
+    "            return False\n",
+    "        i = i + 1\n",
+    "        j = j - 1\n",
+    "    return True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -866,6 +910,30 @@
     "LettPalind(\"909@,.\") returns True   \n",
     "LettPalind(\"He is Sieh!\") returns True  \n",
     "LettPalind(\"His name is Sieh.\") returns False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LettPalind(s):\n",
+    "    import re\n",
+    "    # keep only letters\n",
+    "    res = re.sub(r'[^a-zA-Z]', '', s).lower()\n",
+    "    # 1. build-in function\n",
+    "    # return res == res[::-1]\n",
+    "\n",
+    "    # 2. two-pointers\n",
+    "    i = 0\n",
+    "    j = len(res) - 1\n",
+    "    while i < j:\n",
+    "        if res[i] != res[j]:\n",
+    "            return False\n",
+    "        i = i + 1\n",
+    "        j = j - 1\n",
+    "    return True"
    ]
   },
   {
@@ -881,6 +949,29 @@
     "ValidParenthesis(\"()()()\") returns True     \n",
     "ValidParenthesis(\"()()()(\") returns False   \n",
     "ValidParenthesis(\"((())))\") returns False   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://leetcode.cn/problems/valid-parentheses/\n",
+    "\n",
+    "https://www.educative.io/edpresso/the-valid-parentheses-problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ValidParenthesis(s):\n",
+    "    while '{}' in s or '()' in s or '[]' in s:\n",
+    "        s = s.replace('{}', '')\n",
+    "        s = s.replace('[]', '')\n",
+    "        s = s.replace('()', '')\n",
+    "    return s == ''"
    ]
   },
   {
@@ -1046,6 +1137,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://stackoverflow.com/questions/13258315/check-if-two-strings-share-the-same-pattern-of-repeated-characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SamePattern(s1,s2):\n",
+    "    if len(s1) != len(s2):\n",
+    "        return False\n",
+    "    characterMap = {}\n",
+    "    for i in range(len(s1)):\n",
+    "        if s1[i] not in characterMap:\n",
+    "            if s2[i] in characterMap:\n",
+    "                return False\n",
+    "            characterMap[s1[i]] = s2[i]\n",
+    "        else:\n",
+    "            if s2[i] != characterMap[s1[i]]:\n",
+    "                return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SamePattern(\"abc\", \"aaa\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 38. Anagrams\n",
     "Description     \n",
     "Build a function anagrams to determine whether two given strings are anagrams.      \n",
@@ -1054,6 +1193,16 @@
     "anagrams(\"abc\", \"cba\") returns True     \n",
     "anagrams(\"ab\", \"abc\") returns False     \n",
     "anagrams(\"abccba\", \"aabbbc\") returns False      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def anagrams(s1,s2):\n",
+    "    return sorted(s1) == sorted(s2)"
    ]
   },
   {
@@ -1075,160 +1224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.analyticsvidhya.com/blog/2017/05/questions-python-for-data-science/\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "txt = '''450\n",
-    " 00:17:53,457 --> 00:17:56,175\n",
-    " Okay, but, um,\n",
-    " thanks for being with us.\n",
-    "\n",
-    "451\n",
-    " 00:17:56,175 --> 00:17:58,616\n",
-    " But, um, if there's any\n",
-    " college kids watching,\n",
-    "\n",
-    "452\n",
-    " 00:17:58,616 --> 00:18:01,610\n",
-    " But, um, but, um, but, um,\n",
-    " but, um, but, um,\n",
-    "\n",
-    "453\n",
-    " 00:18:01,610 --> 00:18:03,656\n",
-    " We have to drink, professor.\n",
-    "454\n",
-    " 00:18:03,656 --> 00:18:07,507\n",
-    " It's the rules.\n",
-    " She said \"But, um\"\n",
-    "\n",
-    "455\n",
-    " 00:18:09,788 --> 00:18:12,515\n",
-    " But, um, but, um, but, um...\n",
-    " god help us all.\n",
-    " '''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(re.findall('[B,b]ut, um', txt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str = '''Email_Address,Nickname,Group_Status,Join_Year\n",
-    "aa@aaa.com,aa,Owner,2014\n",
-    "bb@bbb.com,bb,Member,2015\n",
-    "cc@ccc.com,cc,Member,2017\n",
-    "dd@ddd.com,dd,Member,2016\n",
-    "ee@eee.com,ee,Member,2020\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aaa\n",
-      "bbb\n",
-      "ccc\n",
-      "ddd\n",
-      "eee\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in re.finditer('([a-zA-Z]+)@([a-zA-Z]+).(com)', str):\n",
-    "    print(i.group(2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Question Context 4\n",
-    "\n",
-    "Assume, you are given two lists:\n",
-    "\n",
-    "a = [1,2,3,4,5]\n",
-    "\n",
-    "b = [6,7,8,9]\n",
-    "\n",
-    "The task is to create a list which has all the elements of a and b in one dimension.\n",
-    "\n",
-    "Output:\n",
-    "\n",
-    "a = [1,2,3,4,5,6,7,8,9]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4,5]\n",
-    "b = [6,7,8,9]\n",
-    "\n",
-    "a.extend(b)\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.geeksforgeeks.org/append-extend-python/\n",
-    "\n",
-    "If you append another list onto a list, the parameter list will be a single object at the end of the list.\n",
-    "\n",
-    "['geeks', 'for', 'geeks', [6, 0, 4, 1]]"
+    "https://leetcode.cn/problems/two-sum/"
    ]
   },
   {
@@ -1236,25 +1232,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "5) You have built a machine learning model which you wish to freeze now and use later. Which of the following command can perform this task for you?\n",
-    "\n",
-    "Note: Pickle library has been imported as pkl.\n",
-    "\n",
-    "A) push(model, “file”)\n",
-    "\n",
-    "B) save(model, “file”)\n",
-    "\n",
-    "C) dump(model, “file”)\n",
-    "\n",
-    "D) freeze(model, “file”)\n",
-    "\n",
-    "C)"
+    "def TargetSum(lst,target):\n",
+    "    res = dict()\n",
+    "    for ind,val in enumerate(lst):\n",
+    "        if target - val not in res:\n",
+    "            res[val] = ind\n",
+    "        else:\n",
+    "            return [res[target - val],ind]\n",
+    "    return -1"
    ]
   },
   {
