techlent python39 questions and answers

--- a/Techlent Python39.ipynb
+++ b/Techlent Python39.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://techlent.com/cn/courses/Python39"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1 Python Kick Off"
    ]
   },
